--- a/hello-jest-ts/package.json
+++ b/hello-jest-ts/package.json
@@ -15,6 +15,7 @@
     "@types/node": "18.15.11",
     "axios": "1.3.4",
     "jest": "29.4.3",
+    "jest-environment-jsdom": "29.4.3",
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
     "typescript": "4.9.5"
