--- a/hello-jest-ts/package.json
+++ b/hello-jest-ts/package.json
@@ -13,9 +13,15 @@
   "devDependencies": {
     "@types/jest": "29.4.0",
     "@types/node": "18.15.11",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
+    "@types/react-test-renderer": "18.0.0",
     "axios": "1.3.4",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-test-renderer": "18.2.0",
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
     "typescript": "4.9.5"
