--- a/hello-jest-ts/package.json
+++ b/hello-jest-ts/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.0.10",
     "@types/react-test-renderer": "18.0.0",
     "axios": "1.3.4",
+    "identity-obj-proxy": "3.0.0",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
     "react": "18.2.0",
