--- a/hello-jest-ts/package.json
+++ b/hello-jest-ts/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@testing-library/react": "13.4.0",
     "@types/jest": "29.4.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.27",
