--- a/hello-jest-ts/package.json
+++ b/hello-jest-ts/package.json
@@ -17,13 +17,17 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "@types/react-test-renderer": "18.0.0",
+    "@types/selenium-webdriver": "4.1.10",
     "axios": "1.3.4",
+    "chromedriver": "112.0.0",
+    "geckodriver": "3.2.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-test-renderer": "18.2.0",
+    "selenium-webdriver": "4.8.0",
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
     "typescript": "4.9.5"
