--- a/hello-jest-ts/package.json
+++ b/hello-jest-ts/package.json
@@ -24,6 +24,7 @@
     "identity-obj-proxy": "3.0.0",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
+    "puppeteer": "19.6.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-test-renderer": "18.2.0",
